# aoc2021-rust

./: Cargo.toml  README.md
src/: utils.rs
