[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Daniel Huang <danielhuang37@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
itertools = "0.9"
rustc-hash = "1.1.0"
pest = "2.0"
pest_derive = "2.0"
curl = "0.4.41"